feat: market layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,14 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+			"@/components/*": ["./components/*"],
+			"@/styles/*": ["./styles/*"],
+			"@/constants/*": ["./constants/*"],
+			"@/hooks/*": ["./hooks/*"],
+			"@/models/*": ["./models/*"],
+		}
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
