--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@auth0/nextjs-auth0": "^1.9.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
@@ -29,6 +30,7 @@
     "postcss": "^8.4.14",
     "prettier": "2.6.2",
     "tailwindcss": "^3.1.2",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "4.7.3"
   },
   "packageManager": "yarn@3.2.1"
